deploy/staging/stateful-set.tpl.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${KUBE_NAMESPACE}
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: intranet-archive
  serviceName: intranet-archive-headless-service
  template:
    metadata:
      labels:
        app: intranet-archive
    spec:
      serviceAccountName: ${KUBE_NAMESPACE}-service
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
      - name: intranet-archive
        image: ${ECR_URL}:${IMAGE_TAG}
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
          capabilities: 
            drop: ["ALL"]
        resources:
          limits:
            cpu: 500m
            memory: 250Mi
          requests:
            cpu: 500m
            memory: 250Mi
        ports:
        - containerPort: 2000
          name: http
        volumeMounts:
        - name: snapshots
          mountPath: "/tmp/snapshots"
        readinessProbe:
          httpGet:
            path: /health
            port: 2000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 2000
          initialDelaySeconds: 10
          periodSeconds: 15
  volumeClaimTemplates:
  - metadata:
      name: snapshots
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2-expand" # StorageClass name used to create PV
      resources:
        requests:
          storage: 100Gi # Storage resource request size
