deploy/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intranet-archive-staging-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: intranet-archive-staging-ingress-intranet-archive-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - app.archive.staging.intranet.justice.gov.uk
    secretName: intranet-archive-staging-cert-secret
  rules:
  - host: app.archive.staging.intranet.justice.gov.uk
    http:
      paths:
      # Limit public to the `access` route.
      - path: /access
        pathType: ImplementationSpecific
        backend:
          service:
            name: intranet-archive-service
            port:
              number: 2000
